# tutor-contrib-cubite

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
tutorcubite/: plugin.py
tutorcubite/patches/: mfe-dockerfile-post-npm-install  mfe-env-config-buildtime-definitions  mfe-env-config-buildtime-imports  mfe-lms-common-settings  openedx-cms-common-settings  openedx-common-settings  openedx-dockerfile-minimal  openedx-dockerfile-pre-assets  openedx-lms-common-settings
